# RNAmelt

./: README.md  example_api.py  help.html  index.html  pyproject.toml
analysis/: __init__.py  __main__.py  analysis_melting.py  api.py  functions.py  io.py  methods.py  plots.py  sequences.py  util.py  utils.py
rnamelt/: __init__.py  __main__.py  analysis_melting.py  api.py  cleaning.py  constants.py  functions.py  methods.py  plots.py  results.py  utils.py
tests/: test_analysis.py  test_api.py  test_meltanalysis.py  test_methods.py
