[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rnamelt"
version = "0.1.0"
description = "Two-state thermodynamic analysis (ΔH, ΔS, ΔG, Tm) of RNA melting curves"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "tspich" },
    { name = "RaumZeit" },
]
keywords = ["rna", "melting curve", "thermodynamics"]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.5"]

[project.scripts]
rnamelt = "rnamelt.__main__:main"

[project.urls]
Homepage = "https://github.com/tspich/RNAmelt"
Issues = "https://github.com/tspich/RNAmelt/issues"

[tool.hatch.build.targets.wheel]
packages = ["rnamelt"]

[tool.hatch.build.targets.sdist]
include = [
    "rnamelt",
    "README.md",
    "pyproject.toml",
]
